[package]
name = "fxdx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
reqwest = {  version = "0.11.10", features = ["json"] }
anyhow = "1.0.56"
thiserror = "1.0"
openssl = "0.10.38"
